# UWL

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  main.c  uwl_ble_gatt.c  uwl_ble_gatt.h  uwl_gpio.c  uwl_gpio.h  uwl_http.c  uwl_http.h  uwl_io_state.c  uwl_io_state.h  uwl_status_led.c  uwl_status_led.h  uwl_usb_console.c  uwl_usb_console.h  uwl_wifi_softap.c  uwl_wifi_softap.h  uwl_ws.c  uwl_ws.h
main/web/: app.js  config.html  control.html  index.html  style.css
